Update OG image path to root-level preview file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+<meta property="og:title" content="Donkey Pong - Arcade Edition" />
+<meta property="og:description" content="Plumber vs. Donkey Pong CPU! Retro arcade mashup – press START to play." />
+<meta property="og:image" content="https://donkeypong.app/donkey-pong-preview.png" />
+<meta property="og:url" content="https://donkeypong.app" />
+<meta property="og:type" content="website" />
+
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Donkey Pong - Arcade Edition" />
+<meta name="twitter:description" content="Plumber vs. Donkey Pong CPU! Retro arcade mashup – press START to play." />
+<meta name="twitter:image" content="https://donkeypong.app/donkey-pong-preview.png" />
+  
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <title>Donkey Pong</title>
